# bridg

./: .dockerignore  .editorconfig  .env.development  .env.example  .env.test  .env.testing  .eslintrc.cjs  .gitignore  CLAUDE.md  Dockerfile  README.md  api.http  babel.cfg  components.json  compose.yaml  demo.yml  docker-compose.yaml  docker.sh  mkdocs.yml  model.dot  package-lock.json  package.json  pyproject.toml  rollup.config.js  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: copilot-instructions.md
.github/workflows/: backend.yml  ci.yml  e2e.yml.disabled  playwright.yml  telegram-notification.yml  test.yml  ui.yml.disabled
admin/: app.py  common.py  protocol.py  study.py  view.py
api/: base_model.py  db.py  main.py  swagger.py  util.py
api-ts/: package-lock.json  package.json
api/person/: __init__.py  routes.py  schema.py
api/space/: __init__.py
api/subject/: __init__.py  service.py
app/: db.py  utils.py
app/person/: edit.py  index.py
bridg/: __init__.py  convert.py  converter.py
bridg/api/: protcol.py
bridg/common/: __init__.py  activity.py  administrative_gender.py  biologic_entity.py  healthcare.py  healthcare_facility.py  healthcare_provider.py  healthcare_provider_group.py  healthcare_provider_group_member.py  name.py  organization.py  organization_name.py  person.py  project.py  project_conduct.py  research_project.py  study.py  study_subject.py  subject.py
bridg/core/: __init__.py  ad.py  code.py  tel.py  url.py
bridg/protocol/: __init__.py  defined_activity.py  defined_eligibility_criterion.py  defined_eligibility_criterion_answer.py  defined_observation.py  defined_observation_result.py  defined_procedure.py  epoch.py  planned_study_subject.py  study_activity.py  study_protocol.py  study_protocol_version.py  subject.py
bridg/study/: __init__.py  performed_activity.py  performed_exclusion_criterion.py  performed_observation.py  performed_observation_result.py  performed_procedure.py  performed_substance_administration.py  scheduled_activity.py  study_site.py  study_site_protocol_version_relationship.py  study_subject_protocol_version_relationship.py
common/: env.py
dev/: api.sh  babel.sh  db-reset.sh  db.py  graphql.sh  htmlcov.sh  migrate.py  model.py  run.sh  seed.py  seed.yml  test.sh  ui.sh  versioning.py
docs/: db.dot  index.md  model.dot
plan/study/: __init__.py
src/: App.jsx  App.tsx  AppBreadcrumbs.vue  AppLayout.vue  AppNav.vue  BackButton.jsx  Breadcrumbs.jsx  Card.jsx  DateInput.vue  Layout.jsx  Layout.tsx  Modal.jsx  Nav.jsx  Nav.tsx  NavBar.tsx  NavBreadcrumbs.tsx  ThemeController.vue  Toolbar.jsx  authProvider.ts  datatables.js  formkit.config.ts  formkit.theme.js  main.css  main.js  main.jsx  main.ts  main.tsx  routes.jsx  routes.ts  theme.ts
src/Form/: Input.jsx  Input.tsx  Layout.jsx  Layout.tsx
src/components/: Alert.jsx  Alert.tsx  Breadcrumbs.tsx  Card.tsx  Modal.jsx  Modal.tsx  Toolbar.tsx  date-input.tsx
tests/: test_example.py
typings/: flask_babel.pyi
ui/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.js  vitest.setup.ts
umdb/: __init__.py  convert.py  db.py  main.py  swagger.py  util.py
web/: admin.py  admin_view.py  alpine.js  alpine.ts  app.py  assets.py  breadcrumbs.py  dates.py  db.py  env.py  fields.py  form.py  global.d.ts  index.scss  index.ts  json.py  misc.py  select2.ts  templating.py  typescript.py  views.py
(+323 files in other folders)
