[project]
name = "bridg"
version = "0.1.0"
description = ""
authors = ["Kirill Voronin <yoursdearboy@gmail.com>"]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "uvicorn[standard]<1.0.0,>=0.29.0",
    "sqlalchemy<3.0.0,>=2.0.29",
    "psycopg2-binary<3.0.0,>=2.9.9",
    "flask<4.0.0,>=3.0.3",
    "flask-sqlalchemy<4.0.0,>=3.1.1",
    "python-dotenv<2.0.0,>=1.0.1",
    "bootstrap-flask<3.0.0,>=2.4.0",
    "flask-babel<5.0.0,>=4.0.0",
    "flask-wtf<2.0.0,>=1.2.1",
    "wtforms-alchemy<1.0.0,>=0.18.0",
    "flask-htmx<1.0.0,>=0.3.2",
    "flask-assets<3.0.0,>=2.1.0",
    "pyyaml<7.0.0,>=6.0.2",
    "pydantic<3.0.0,>=2.9.2",
    "cattrs<25.0.0,>=24.1.2",
    "toolz<2.0.0,>=1.0.0",
    "fastapi[standard]>=0.116.1",
]

[dependency-groups]
dev = [
    "ipykernel<7.0.0,>=6.29.4",
    "ruff<1.0.0,>=0.9.9",
    "sqlalchemy-schemadisplay<3.0,>=2.0",
    "mkdocstrings[python]<1.0.0,>=0.25.2",
    "mkdocs<2.0.0,>=1.6.0",
    "mkdocs-material<10.0.0,>=9.5.30",
    "libsass<1.0.0,>=0.23.0",
]
test = [
    "pytest<9.0.0,>=8.3.3",
    "pytest-playwright<1.0.0,>=0.5.2",
    "pytest-cov<7.0.0,>=6.0.0",
]

[tool.pytest.ini_options]
addopts = "--cov --cov-report html"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I", "TID"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
