[project]
name = "bridg-workspace"
version = "0.1.0"
description = ""
authors = ["Kirill Voronin <yoursdearboy@gmail.com>"]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "psycopg2-binary<3.0.0,>=2.9.9",
    "pyyaml<7.0.0,>=6.0.3"
]

[dependency-groups]
dev = [
    "ipykernel<7.0.0,>=6.29.4",
    "ruff<1.0.0,>=0.9.9",
    "sqlalchemy-schemadisplay<3.0,>=2.0",
    "mkdocstrings[python]<1.0.0,>=0.25.2",
    "mkdocs<2.0.0,>=1.6.0",
    "mkdocs-material<10.0.0,>=9.5.30",
    "libsass<1.0.0,>=0.23.0",
    "poethepoet>=0.37.0",
]
test = [
    "pytest<10.0.0,>=9.0.2",
    "pytest-cov<7.0.0,>=6.0.0",
]

[tool.poe.tasks]
mkinit = [
    { ref = "alchemy:mkinit", cwd = "packages/alchemy" },
    { ref = "api:mkinit", cwd = "packages/api" }
]

[[tool.poe.include]]
path = "packages/alchemy/pyproject.toml"
cwd  = "packages/alchemy"

[[tool.poe.include]]
path = "packages/api/pyproject.toml"
cwd  = "packages/api"

[tool.pytest.ini_options]
addopts = "--cov --cov-report html"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I", "TID"]

[tool.uv.workspace]
members = [
    "packages/alchemy",
    "packages/api",
    "packages/common"
]
